css/site.css
a
{
  text-decoration: none;
}
body
{
  width: 100%;
  background: #26B3C9;
  margin: 0;
}
#footer
{
  position: absolute;
  top: 850px;
  width: 100%;
  min-height: 35px;
  background: black;
  color: whitesmoke;
  text-align: center;
  padding-top: 15px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
#formdiv
{
  margin: 0 auto;
  width: 60%;
  margin-top: 150px;
  background: #536A69;
  height: 400px;
  padding: 5px;
}
  fieldset
  {
    margin: 0;
    margin-top: 15px;
    padding: 5px;
  }
  form input
  {
    width: 50%;
    border-radius: 5px;
    margin: 10px;
  }
  #button
  {
    float: right;
    width: 30%;
    margin-right: 0;
  }
  textarea
  {
    box-sizing: border-box;
    width: 100%;
    border-radius: 5px;
  }
#hddiv
{
  margin: 0 auto;
  margin-top: 150px;
  min-height: 400px;
  width: 55%;
}
  #hdimgdiv img
  {
    width: 35px;
  }
  #hddiv div
  {
    min-height: 10px;
  }
  #hdimgdiv
  {
    float: left;
  }
  #hdh4
  {
    float: left;
    width: 90%;
    margin-top: -13px;
    margin-left: 3px;
  }
  #hdimg
  {
    width: 100%;
    margin: 0 auto;
  }
  #headlineNews
  {
    position: absolute;
    left:35%;
    width:45%;
    background: #536A69;
    padding: 10px 0;
    min-height: 600px;
  }
    #hdlink
    {
      text-decoration: none;
      color: black;
    }
    #headlineNews:hover
    {
      border: 2px solid blue;
    }
    #hdlinediv
    {
      margin: 0 20px;
      margin-top: 90px;
    }
    figure img
    {
      margin-top: 12px;
      float: right;
      width: 65%;
    }
header
{
  position: absolute;
  width: 100%;
  height: 150px;
  background: blue;
  text-align: center;
  z-index: 2;
}
  #logo
  {
    position: absolute;
    top: 50px;
    left: calc(5% - 25px);
    width: 150px;
    height: 70px;
  }
header img
{
  width: 100%;
  height: 150px;
}
  #social
  {
    position: absolute;
    top: 15px;
    left: calc(100% - 55px);
    width: 4%;
    min-height: 15px;
    text-align: center;
  }
  .social
  {
    width: 50px;
    height: 40px;
    margin: 0 auto;
  }
  #hammenu
  {
    display: none;
    position: absolute;
  }
    #drpdwn
    {
      display: none;
      position: absolute;
      background-color: #f1f1f1;
      min-width: 160px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      background: #1D3834;
    }
    #drpdwn a
    {
      display: block;
      color: gold;
      font-size: 0.9em;
    }
main
{
  position: absolute;
  top: 150px;
  width: 100%;
  min-height: 400px;
}
#mainPoster
{
  margin: 0 20px;
  margin-top: 100px;
  margin-bottom: 20px;
  float: left;
  width: calc(60% - 40px);
  min-height: 620px;
  background: #536A69;
}
#mainPoster img
{
  width: 100%;
  min-height: 350px;
}
#mainPoster h2
{
  margin: 0;
}
  #textdiv
  {
    padding: 5px;
  }
nav
{
  position: absolute;
  width: 100%;
  height: 180px;
  z-index: 1;
  background: #1D3834;
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
  border-bottom-left-radius: 50%;
  border-bottom-right-radius: 50%;
  top: 60px;
  text-align: center;
  padding: 0;
}
  .navlinks
  {
    position: absolute;
    top: 95px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1.4em;
    color: gold;
  }
  .navlinks:hover
  {
    border-bottom: 2px solid gold;
  }
  nav a:nth-child(1)
  {
    left: calc(14% - 15px);
  }
  nav a:nth-child(2)
  {
    left: 30%;
    top: 130px;
  }
  nav a:nth-child(3)
  {
    left: 45%;
  }
  nav a:nth-child(4)
  {
    left: 65.5%;
    top: 130px;
  }
  nav a:nth-child(5)
  {
    left: calc(83% - 10px);
  }
#otherNews
{
  position: absolute;
  width: 35%;
  min-height: 600px;
}
  .otherNews
  {
    margin: 0 auto;
    padding-bottom: 10px;
    width: 90%;
    min-height: 100px;
    border-bottom: 1px solid #707070;
  }
  .otherNews:hover
  {
    border-bottom: none;
    border: 2px solid blue !important;
  }
  .comments
  {
    position: relative;
    bottom: -9px;
    width: 25px;
    cursor: pointer;
  }
  #news1
  {
    margin-top: 100px;
  }
  #news3
  {
    border-bottom: none;
  }
#videos
{
  position: absolute;
  left:80%;
  width: 20%;
  min-height: 600px;
  text-align: center;
}
#videos img
{
  width: 100%;
  margin: 0 auto;
  margin-top: 12px;
}
  #videos h2
  {
    margin: 0 8px;
    margin-top: 100px;
  }
  #vid4
  {
    border-bottom: none;
  }
#topright
{
  margin: 0 20px;
  margin-top: 100px;
  margin-bottom: 20px;
  float: right;
  width: calc(40% - 40px);
  min-height: 600px;
}
.footnote
{
  position: absolute; 
  margin-bottom: 2px;
  bottom: 0px;
}
.titbits
{
  position: relative;
  width: calc(100% - 12px);
  min-height: 204px;
  padding: 5px;
  margin-bottom: 10px;
  border: 1px solid gray;
}
.titbits:hover
{
  border: 2px solid blue;
}
.titbits h3
{
  margin: 0;
}
.titbits a
{
  color: black;
  text-decoration: underline;
}
#middiv
{
  clear: both;
  margin: 20px;
  width: calc(100%- 40px);
  min-height: 500px;
}
.poster
{
  float: left;
  width: 22%;
  min-height: 500px;
  margin-right: 4%;
  background: #536A69;
}
.poster:nth-child(4)
{
  margin-right: 0;
}
.poster img
{
  width: 100%;
  min-height: 150px;
}
.poster h2
{
  margin: 0;
}
  .story
  {
    padding: 5px;
    height: 275px;
  }
  .para
  {
    padding: 5px;
    height: 10px;
  }
@media screen and (max-width: 810px)
{
  #headlineNews
  {
    position: static;
    width: 100%;
  }
  #otherNews
  {
    position: static;
    width: 100%;
  }
  #videos
  {
    position: static;
    width: 100%;
  }
  #hddiv
  {
    width: calc(100% - 40px);
  }
  #hdh4
  {
    float: left;
    width: 85%;
    margin-top: -18px; 
  }
  #formdiv
  {
    margin: 0 auto;
    width: 60%;
    margin-top: 50px;
    background: #536A69;
    height: 400px;
    padding: 5px;
  }
  #videos h2
  {
    margin-top: 15px;
  }
  #headlineNews
  {
    padding-top: 0;
  }
  #news1
    {
      margin-top: 0;
    }
  #hdlinediv
  {
    margin-top: -6px;
  }
  #social
  {
    top: 30px;
  }
  #hammenu
  {
    left: calc(100% - 44px);
    display: block;
    font-size: 2em;
  }
    i
    {
      color: rgb(57, 143, 148);
    }
  #hammenu :hover
  {
    color: #26B3C9;
  }
  #hammenu:hover #drpdwn
  {
    display: block;
    left: calc(100% - 180px);
    top: 4px;
    z-index: 10;
  }
  nav
  {
    display: none;
  }

  #mainPoster
  {
    clear: both;
    margin-top: 50px;
    width: calc(100% - 40px);
  }
  #topright
  {
    clear: both;
    width: calc(100% - 40px);
    margin-top: 0;
    margin-bottom: 30px;
  }
  #middiv
  {
    clear: both;
    margin: 20px;
    width: calc(100%- 40px);
    height: 600px;
    background: aqua;
  }
  .poster
  {
    clear: both;
    width: 100%;
    margin: 0;
    margin-bottom: 20px;
  }
  .para
  {
    height: 30px;
  }
}

